--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "bootstrap": "^4.5.0",
+    "@types/datatables.net": "^1.10.21",
+    "@types/jquery": "^3.5.14",
+    "angular-datatables": "^13.0.1",
+    "bootstrap": "^4.6.1",
     "crypto-js": "^4.1.1",
+    "datatables.net": "^1.11.5",
+    "datatables.net-dt": "^1.11.5",
+    "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
